--- a/app/src/ui/components/globalcss/vars/buttons.module.less
+++ b/app/src/ui/components/globalcss/vars/buttons.module.less
@@ -7,8 +7,8 @@
 @btn-primary-bg: #007AFF;
 @btn-primary-bg-active: #008cff;
 @btn-primary-text: white;
-@btn-primary-shadow: drop-shadow(0px 0px 10px rgba(50, 145, 233, 0.5));
-@btn-primary-shadow-hover: drop-shadow(0px 0px 10px rgba(50, 145, 233, 0.75));
+@btn-primary-shadow: 0px 0px 10px rgba(50, 145, 233, 0.5);
+@btn-primary-shadow-hover: 0px 0px 10px rgba(50, 145, 233, 0.75);
 
 @btn-default-bg: #EBEBEB;
 @btn-default-text: @text-primary-color;
