--- a/app/src/ui/widgets/Header/Header.css
+++ b/app/src/ui/widgets/Header/Header.css
@@ -1,29 +1,48 @@
 .header {
     display: flex;
-    height: 35px;
+    /* height: 35px; */
     width: 100%;
     top: 0;
     position: sticky;
+    flex-direction: column;
     justify-content: center;
     background-color: rgba(245, 245, 245, 0.74);
     z-index: 1;
     backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
 }
 
 .header-menus {
     display: grid;
     grid-auto-flow: column;
-    grid-column-gap: 36px;
-    height: 11px;
+    grid-column-gap: 30px;
+    /* height: 11px; */
     margin: auto;
 }
 
 .header-tab {
-    width: 153px;
-    background-color: #BBBBBB;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    height: 100px;
+    width: 135px;
+    margin: 15px 0;
+    background-color: transparent;
     border-radius: 23px;
+    justify-content: center;
+    align-items: center;
+    cursor: default;
+    user-select: none;
+    -webkit-user-select: none;
+
+    p {
+        height: 24px;
+        margin: 0;
+        font-size: 18px;
+        font-variation-settings: "wght" 500;
+    }
 }
 
 .header-active-tab {
-    background-color: black;
+    background-color: rgba(240, 240, 240, 1);
 }
