--- a/app/src/ui/widgets/NewsList/NewsList.css
+++ b/app/src/ui/widgets/NewsList/NewsList.css
@@ -6,7 +6,7 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    margin-top: 35px;
+    /* margin-top: 35px; */
     padding-top: 50px;
     justify-content: center;
     flex-wrap: wrap;
