More stable and clean header menu animation implementation

--- a/app/src/components/Header/header.module.less
+++ b/app/src/components/Header/header.module.less
@@ -13,6 +13,7 @@
     background-color: transparent;
     border: none;
     border-radius: 15px;
+    overflow: hiddern;
 
 
     svg {
@@ -30,7 +31,7 @@
         .av-text-sm-s;
         color: @text-primary;
 
-        overflow: hidden;
+        overflow: inherit;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
@@ -59,13 +60,7 @@
        margin: auto;
        position: relative;
 
-       button {
-           .header-tab;
-       }
-   }
-
-   button {
-       .header-tab;
+        .header-tab {};
    }
 }
 
