--- a/app/src/styles/global.less
+++ b/app/src/styles/global.less
@@ -1,22 +1,8 @@
-@import "./themes.less";
-
 html, body {
-    /* margin: 0;
+    margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    transition: background-color 0.3s ease, color 0.3s ease; */
 }
 
 svg {
     transform: translate3d(0,0,0);
-}
-
-.light {
-    /* background-color: @background-color;
-    color: @font-color; */
-}
-
-.dark {
-    /* background-color: @background-color;
-    color: @font-color; */
 }
