--- a/app/src/uikit/styles/themes/light/base/colors.less
+++ b/app/src/uikit/styles/themes/light/base/colors.less
@@ -15,3 +15,19 @@
 @gray-600: mix(@gray-900, @gray-25, 70%);
 @gray-700: mix(@gray-900, @gray-25, 80%);
 @gray-800: mix(@gray-900, @gray-25, 90%);
+
+
+// Brand palette
+@brand-25: #FAFCFF;
+@brand-900: #30557D;
+
+@brand-50: mix(@brand-900, @brand-25, 10%);
+@brand-100: mix(@brand-900, @brand-25, 20%);
+@brand-200: mix(@brand-900, @brand-25, 30%);
+@brand-300: mix(@brand-900, @brand-25, 40%);
+@brand-400: mix(@brand-900, @brand-25, 50%);
+@brand-500: mix(@brand-900, @brand-25, 60%);
+/* @brand-600: mix(@brand-900, @brand-25, 70%); */
+@brand-600: #006CFF;
+@brand-700: mix(@brand-900, @brand-25, 80%);
+@brand-800: mix(@brand-900, @brand-25, 90%);
