--- a/app/src/pages/NewsList/news.module.less
+++ b/app/src/pages/NewsList/news.module.less
@@ -21,7 +21,7 @@
         flex-direction: column;
         gap: 15px;
         padding: 15px;
-        border-radius: 25px;
+        .calc-outer-radius(10px, 15px);
 
         .av-acryl;
 
@@ -44,7 +44,7 @@
 
         .descr {
             .av-text-lg-r;
-            color: @text-secondary;
+            color: @text-primary;
         }
     }
 }
