--- a/app/src/styles/functions.less
+++ b/app/src/styles/functions.less
@@ -2,3 +2,7 @@
   @inner-radius: @outer-radius - (@outer-thickness / 2);
   border-radius: @inner-radius;
 }
+
+.calc-outer-radius(@inner-radius, @padding) {
+  border-radius: @inner-radius + @padding;
+}
