--- a/app/src/uikit/components/Button/button.module.less
+++ b/app/src/uikit/components/Button/button.module.less
@@ -5,12 +5,20 @@
     padding: 8px 15px;
     border-radius: 10px;
     border: none;
-    color: @btn-active-color;
+
+    cursor: pointer;
 
     .av-text-sm-s;
-}
 
-.primary {
-    background-color: #007AFF;
-    box-shadow: 0px 0px 10px rgba(50, 145, 233, 0.5);
+    &.primary {
+        background-color: #007AFF;
+        box-shadow: 0px 0px 10px rgba(50, 145, 233, 0.5);
+        color: @btn-active-color;
+
+        transition: scale 0.3s;
+
+        &:hover {
+
+        }
+    }
 }
