--- a/app/src/uikit/styles/themes/light/base/colors.less
+++ b/app/src/uikit/styles/themes/light/base/colors.less
@@ -1,5 +1,6 @@
 @white: white;
 @black: black;
+@accent: #006CFF;
 
 
 // Gray palette
@@ -27,7 +28,12 @@
 @brand-300: mix(@brand-900, @brand-25, 40%);
 @brand-400: mix(@brand-900, @brand-25, 50%);
 @brand-500: mix(@brand-900, @brand-25, 60%);
-/* @brand-600: mix(@brand-900, @brand-25, 70%); */
-@brand-600: #006CFF;
+@brand-600: mix(@brand-900, @brand-25, 70%);
 @brand-700: mix(@brand-900, @brand-25, 80%);
 @brand-800: mix(@brand-900, @brand-25, 90%);
+
+
+// Elements
+@hover_shade: rgba(0, 0, 0, 0.1);
+@disabled_shade: rgba(255, 255, 255, 0.5);
+@focus: rgba(0, 108, 255, 0.25);
