--- a/app/src/uikit/styles/themes/light/base/elements/button.less
+++ b/app/src/uikit/styles/themes/light/base/elements/button.less
@@ -1,2 +1,15 @@
-@btn-active-color: @white;
-@btn-active-bg: @brand-600;
+@btn-primary-color: @white;
+@btn-primary-color_hover: @white;
+@btn-primary-bg: @accent;
+@btn-primary-bg_hover: rgb(0, 97, 229);
+
+@btn-secondary-color: @gray-900;
+@btn-secondary-color_hover: @gray-900;
+@btn-secondary-bg: @gray-50;
+@btn-secondary-bg_hover: mix(@gray-50, @hover_shade, 0%);
+
+@btn-tertiary-color: @gray-700;
+@btn-tertiary-color_hover: @gray-900;
+@btn-tertiary-bg: rgba(0, 0, 0, 0);
+@btn-tertiary-bg_hover: rgba(0, 0, 0, 0);
+@btn-tertiary-stroke_hover: 2px solid @gray-50;
