--- a/app/src/uikit/styles/themes/light/base/elements/button.less
+++ b/app/src/uikit/styles/themes/light/base/elements/button.less
@@ -6,10 +6,15 @@
 @btn-secondary-color: @gray-900;
 @btn-secondary-color_hover: @gray-900;
 @btn-secondary-bg: @gray-50;
-@btn-secondary-bg_hover: mix(@gray-50, @hover_shade, 0%);
+@btn-secondary-bg_hover: @gray-100;
 
 @btn-tertiary-color: @gray-700;
 @btn-tertiary-color_hover: @gray-900;
 @btn-tertiary-bg: rgba(0, 0, 0, 0);
 @btn-tertiary-bg_hover: rgba(0, 0, 0, 0);
 @btn-tertiary-stroke_hover: 2px solid @gray-50;
+
+@acrylbtn-primary-color: @gray-900;
+@acrylbtn-primary-color_hover: @gray-900;
+@acrylbtn-primary-bg: linear-gradient(0deg, rgba(246, 246, 246, 0.84), rgba(246, 246, 246, 0.84));
+@acrylbtn-primary-bg_hover: linear-gradient(0deg, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.03)), linear-gradient(0deg, rgba(246, 246, 246, 0.84), rgba(246, 246, 246, 0.84)), #262626;
