--- a/app/src/uikit/styles/typo/types/text.less
+++ b/app/src/uikit/styles/typo/types/text.less
@@ -30,11 +30,11 @@
                 text-decoration-skip-ink: none;
 
                 margin: 0;
-
+/*
                 & + p {
                     margin: 0;
                     margin-top: @line-height;
-                }
+                } */
             }
 
             .loop-styles(@size-i - 1);
