Initial window implementation

--- a/app/src/pages/Instances/instances.module.less
+++ b/app/src/pages/Instances/instances.module.less
@@ -6,7 +6,11 @@
     .PageContent {
         display: flex;
         flex-direction: column;
+        gap: 20px;
+
         padding-top: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
 
         .InstancesContainer {
             max-width: 1800px;
@@ -15,7 +19,6 @@
             flex-wrap: wrap;
             gap: 15px;
             justify-content: center;
-            padding: 10px;
         }
     }
 }
