--- a/app/src/uikit/styles/themes/light/base/colors.less
+++ b/app/src/uikit/styles/themes/light/base/colors.less
@@ -33,6 +33,11 @@
 @brand-800: mix(@brand-900, @brand-25, 90%);
 
 
+// Utility
+@danger: #EC3838;
+@warning: #FEC808;
+
+
 // Elements
 @hover_shade: rgba(0, 0, 0, 0.1);
 @disabled_shade: rgba(255, 255, 255, 0.5);
