--- a/app/src/uikit/components/Button/button.module.less
+++ b/app/src/uikit/components/Button/button.module.less
@@ -36,6 +36,10 @@
 
     cursor: pointer;
 
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+
     &.primary {
         background: @btn-primary-bg;
         box-shadow: 0px 0px 10px rgba(50, 145, 233, 0.5);
