--- a/app/src/uikit/styles/themes/light/base/elements/index.less
+++ b/app/src/uikit/styles/themes/light/base/elements/index.less
@@ -1,3 +1,5 @@
 @import "./button.less";
 
 @focus-outline: 4px solid rgba(0, 108, 255, 0.25);
+@focus-shadow: 0px 0px 0px 4px @focus;
+@focus-shadow-compensation: 0px 0px 0px 2px @white;
