--- a/app/src/uikit/components/Card/card.module.less
+++ b/app/src/uikit/components/Card/card.module.less
@@ -25,6 +25,7 @@
         border: 2px solid #EBEBEB;
         /* box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25); */
         border-radius: 20px;
+        overflow: hidden;
 
         .button {
             opacity: 0;
@@ -40,7 +41,6 @@
             height: 100%;
             width: 100%;
             position: absolute;
-            border-radius: 20px;
             background-color: rgba(0, 0, 0, 0.55);
             backdrop-filter: blur(4px);
             -webkit-backdrop-filter: blur(4px);
