--- a/app/src/uikit/styles/themes/light/base/colors.less
+++ b/app/src/uikit/styles/themes/light/base/colors.less
@@ -18,6 +18,12 @@
 @gray-800: mix(@gray-900, @gray-25, 90%);
 
 
+// Red palette
+@red-300: #FEE4E2;
+@red-400: #FF6E6E;
+@red-500: #EC3838;
+
+
 // Brand palette
 @brand-25: #FAFCFF;
 @brand-900: #30557D;
