--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -29,7 +29,7 @@
     opacity: 0;
     z-index: 2;
 
-    .calc-outer-radius(@btn-borderradius, @content-padding);
+    .calc-outer-radius(@btn-br, @content-padding);
 
 
     .header {
@@ -104,10 +104,17 @@
 
             .flexbox {
                 display: flex;
+                gap: 15px;
 
                 &.expand > * {
                     width: 100%;
                 }
+            }
+
+            .vertical-stack {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
             }
         }
     }
