--- a/app/src/uikit/styles/themes/light/base/colors.less
+++ b/app/src/uikit/styles/themes/light/base/colors.less
@@ -19,9 +19,16 @@
 
 
 // Red palette
-@red-300: #FEE4E2;
-@red-400: #FF6E6E;
-@red-500: #EC3838;
+@red-25: #FFFBFA;
+@red-100: #FEF3F2;
+@red-200: #FDC3BE;
+@red-300: #FDA29B;
+@red-400: #F67369;
+@red-500: #F04438;
+@red-600: #D23C30;
+@red-700: #B53529;
+@red-800: #972E21;
+@red-900: #7A271A;
 
 
 // Brand palette
