--- a/app/src/uikit/components/Card/card.module.less
+++ b/app/src/uikit/components/Card/card.module.less
@@ -27,13 +27,19 @@
         border-radius: 20px;
         overflow: hidden;
 
-        .button {
-            opacity: 0;
+        // Webkit `transform: translate(-50%, -50%)` property fix for text clarity
+        .action-container {
+            height: 100%;
+            width: 100%;
+            display: flex;
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) translate3d(0, 0, 0);
+
+            opacity: 0;
             z-index: 2;
+
+            .button {
+                margin: auto;
+            }
         }
 
         .shade {
@@ -85,7 +91,7 @@
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
     }
 
-    &:hover .shade, &:hover .button {
+    &:hover .shade, &:hover .action-container {
         opacity: 1;
     }
 }
