--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -28,6 +28,7 @@
 
     opacity: 0;
     z-index: 2;
+    display: none;
 
     .calc-outer-radius(@btn-br, @content-padding);
 
@@ -36,6 +37,7 @@
         display: flex;
         height: 50px;
         border-bottom: 1.5px @gray-50 solid;
+        transform: translateZ(0);
 
         .name {
             display: flex;
@@ -108,6 +110,11 @@
 
                 &.expand > * {
                     width: 100%;
+                }
+
+                & > * {
+                    // Webkit width calculation fix
+                    min-width: 0;
                 }
             }
 
