--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -43,6 +43,8 @@
             display: flex;
             height: 100%;
             padding: 0 @default-padding;
+            color: @text-primary;
+
             .av-text-lg-s;
 
             p {
