IndexDB manipulation module, libs restructurization, imageBrowser update

--- a/app/src/uikit/widgets/ImageBrowser/imageBrowser.module.less
+++ b/app/src/uikit/widgets/ImageBrowser/imageBrowser.module.less
@@ -1,5 +1,12 @@
 @import "@/uikit/styles/main";
 
+
+.indicator-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .image-browser {
    display: flex;
    flex-direction: column;
