--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -1,6 +1,7 @@
 @import "@/uikit/styles/main";
 @import "@/styles/functions";
 
+
 @default-padding: 15px;
 @content-padding: 15px;
 
@@ -8,8 +9,8 @@
     max-width: 465px;
     width: 100%;
 
-    max-height: 80%;
     height: fit-content;
+    max-height: 80%;
     min-height: 100px;
 
     position: fixed;
@@ -38,6 +39,11 @@
         height: 50px;
         border-bottom: 1.5px @gray-50 solid;
         transform: translateZ(0);
+
+        /* position: sticky;
+        top: 0;
+        background: @white;
+        z-index: 1; */
 
         .name {
             display: flex;
@@ -133,5 +139,9 @@
         justify-content: flex-end;
         gap: 10px;
         padding: @content-padding;
+
+        position: sticky;
+        bottom: 0;
+        background: @white;
     }
 }
