--- a/app/src/uikit/components/Indication/loading.module.less
+++ b/app/src/uikit/components/Indication/loading.module.less
@@ -1,7 +1,7 @@
 @import "@/uikit/styles/main";
 
 .indicator-wrapper {
-    width: fit-content;
+    width: max-content;
     display: flex;
     gap: 10px;
     padding: 10px;
@@ -10,12 +10,29 @@
     div {
         display: flex;
         align-items: center;
-        animation: spin .3s infinite linear;
 
-        svg {
-            path {
-                fill: @text-tertiary;
-                stroke: @text-tertiary;
+        .loading {
+            animation: spin .3s infinite linear;
+
+            svg {
+                path {
+                    fill: @text-tertiary;
+                    stroke: @text-tertiary;
+                }
+            }
+        }
+
+        .done {
+            path:first-child {
+                stroke-dasharray: 69; /* Длина окружности круга */
+                stroke-dashoffset: 69; /* Полностью скрыть круг */
+                animation: draw-circle .5s ease-out forwards;
+            }
+
+            path:nth-child(2) {
+                stroke-dasharray: 16;
+                stroke-dashoffset: 16;
+                animation: draw-check 0.2s .5s ease-out forwards;
             }
         }
     }
@@ -37,4 +54,22 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+@keyframes draw-circle {
+  from {
+    stroke-dashoffset: 69;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes draw-check {
+  from {
+    stroke-dashoffset: 16;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
