--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -33,6 +33,10 @@
 
     .calc-outer-radius(@btn-br, @content-padding);
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
 
     .header {
         display: flex;
@@ -40,10 +44,10 @@
         border-bottom: 1.5px @gray-50 solid;
         transform: translateZ(0);
 
-        /* position: sticky;
+        position: sticky;
         top: 0;
         background: @white;
-        z-index: 1; */
+        z-index: 2;
 
         .name {
             display: flex;
@@ -143,5 +147,6 @@
         position: sticky;
         bottom: 0;
         background: @white;
+        z-index: 2;
     }
 }
