--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -29,7 +29,7 @@
 
     opacity: 0;
     z-index: 2;
-    display: none;
+    /* display: none; */
 
     .calc-outer-radius(@btn-br, @content-padding);
 
