--- a/app/src/uikit/widgets/ProgressDisplay/progressDisplay.module.less
+++ b/app/src/uikit/widgets/ProgressDisplay/progressDisplay.module.less
@@ -10,37 +10,71 @@
     .item {
         display: flex;
         flex-direction: column;
-        gap: 7px;
+        /* gap: 5px; */
 
         .details {
             width: 100%;
             display: flex;
             gap: 7px;
+            align-items: center;
 
             p {
-                .av-text-md-m;
+                .av-text-md-r;
             }
 
-            .inprogress-name {
+            /* .inprogress-name {
                 .av-text-lg-m;
-            }
+            } */
 
             .time {
                 .av-text-md-r;
                 margin-inline-start: auto;
             }
+
+            .icon {
+                width: 0;
+                opacity: 0;
+            }
+        }
+
+        .progress {
+            display: flex;
+            height: 0;
+            padding: 0 0 0 7px;
+            align-items: end;
+
+            &>progress {
+                width: 100%;
+                height: 7px;
+                opacity: 0;
+                border: none;
+            }
+
+            &>progress::-webkit-progress-bar {
+                background-color: #E6E6E6;
+                border-radius: 7px;
+            }
+
+            &>progress::-webkit-progress-value {
+                background-color: #007AFF;
+                border-radius: 7px;
+            }
         }
 
         &.inprogress {
-            margin: 10px 0;
+            /* margin: 10px 0; */
+
+            .name {
+                .av-text-lg-m;
+            }
         }
 
         &.pending {
-            .details > p:first-child {
+            .name {
                 .av-text-md-r;
             }
 
-            .details > p:nth-child(2) {
+            .time {
                 color: gray;
             }
         }
