--- a/app/src/uikit/styles/themes/light/base/colors.less
+++ b/app/src/uikit/styles/themes/light/base/colors.less
@@ -56,3 +56,4 @@
 @hover_shade: rgba(0, 0, 0, 0.1);
 @disabled_shade: rgba(255, 255, 255, 0.5);
 @focus: rgba(0, 108, 255, 0.25);
+@focus_destructive: rgb(254, 228, 226);
