--- a/app/src/uikit/styles/themes/light/base/elements/index.less
+++ b/app/src/uikit/styles/themes/light/base/elements/index.less
@@ -7,4 +7,5 @@
 
 @focus-outline: 4px solid rgba(0, 108, 255, 0.25);
 @focus-shadow: 0px 0px 0px 4px @focus;
+@focus-shadow_destructive: 0 0 0 4px @focus_destructive;
 @focus-shadow-compensation: 0px 0px 0px 2px @white;
