Implement UIKit tabs

--- a/app/src/uikit/styles/themes/light/base/elements/index.less
+++ b/app/src/uikit/styles/themes/light/base/elements/index.less
@@ -4,6 +4,7 @@
 @import "./dropdown.less";
 @import "./tasklist.less";
 @import "./sidebar.less";
+@import "./tabs.less";
 
 @focus-outline: 4px solid rgba(0, 108, 255, 0.25);
 @focus-shadow: 0px 0px 0px 4px @focus;
