--- a/app/src/uikit/components/Window/window.module.less
+++ b/app/src/uikit/components/Window/window.module.less
@@ -129,9 +129,13 @@
                     width: 100%;
                 }
 
+                &.center {
+                    align-items: center;
+                }
+
                 & > * {
                     // Webkit width calculation fix
-                    min-width: 0;
+                    /* min-width: 0; */
                 }
             }
 
